--- a/src/app/pages/ncs/create-prop/steps/step1/ishikawa-diagram.component.html
+++ b/src/app/pages/ncs/create-prop/steps/step1/ishikawa-diagram.component.html
@@ -38,7 +38,7 @@
                 </p-editor>
             </div>
         </div>
-        <img src="../../../../../../assets/images/Espinha de Peixe.png" width="900" class="ml-5 mr-3">
+        <img src="../../../../../../assets/images/Espinha de Peixe.png" width="900" class="ml-5">
         <div class="d-flex">
             <div class="col">
                 
