--- a/src/app/pages/ncs/about/closing/closing.component.css
+++ b/src/app/pages/ncs/about/closing/closing.component.css
@@ -42,3 +42,59 @@ h2 {
     display: flex;
     align-items: center;
 }
+.confirm {
+    font-weight: bold;
+    font-size: 16px;
+}
+
+.question {
+    font-weight: 500;
+    font-size: 15px;
+}
+
+.question-information {
+    color: gray;
+    font-size: 12px;
+}
+
+.button-bar button {
+    width: 130px;
+}
+
+.information {
+    font-size: 13px;
+}
+
+.radio-div {
+    display: flex;
+    align-items: center;
+}
+
+
+.confirm {
+    font-weight: bold;
+    font-size: 16px;
+}
+
+.question {
+    font-weight: 500;
+    font-size: 15px;
+}
+
+.question-information {
+    color: gray;
+    font-size: 12px;
+}
+
+.button-bar button {
+    width: 130px;
+}
+
+.information {
+    font-size: 13px;
+}
+
+.radio-div {
+    display: flex;
+    align-items: center;
+}
