--- a/src/app/pages/ncs/sgq-evaluation/steps/changes/changes.component.html
+++ b/src/app/pages/ncs/sgq-evaluation/steps/changes/changes.component.html
@@ -1,6 +1,6 @@
 <div class="cabecalho">
-  <h1 class="mr-3">Mudanças do SGQ *</h1>
-  <p>Descreva as mudanças no SGQ observadas nesta NC.</p>
+  <h1 class="mr-3">{{ "sgq.steps.step2.sgqChanges" | translate }}</h1>
+  <p>{{ "sgq.steps.step2.descriptionChanges" | translate }}</p>
 </div>
 
 <div class="mt-4">
