--- a/src/app/pages/ncs/sgq-evaluation/steps/reoccurrence/nc-info/nc-infor-view-nc/nc-infor-view-nc.component.html
+++ b/src/app/pages/ncs/sgq-evaluation/steps/reoccurrence/nc-info/nc-infor-view-nc/nc-infor-view-nc.component.html
@@ -4,7 +4,7 @@
       <div class="d-flex justify-content-between accordion">
         <p>
           <i class="bi bi-file-earmark-text"></i>
-          Identificação da NC
+          {{ "newNC.step1.identifyNC.title" | translate }}
         </p>
       </div>
     </ng-template>
@@ -13,13 +13,13 @@
         <div class="div-ident-parceiro">
           <h2>
             <i class="bi bi-card-text"></i>
-            Dados de Identificação
+            {{ "newNC.review.identification" | translate }}
           </h2>
           <div class="d-flex justify-content-between flex-column flex-lg-row">
             <div class="contato-info d-flex flex-row">
               <i class="bi bi-ticket-perforated mr-1"></i>
               <div>
-                <span class="info-titulo">Número</span>
+                <span class="info-titulo">{{ "sgq.number" | translate }}</span>
                 <br />
                 <span class="info-dados">{{ nc?.code || "" }}</span>
               </div>
@@ -27,7 +27,9 @@
             <div class="contato-info d-flex flex-row">
               <i class="bi bi-calendar-week mr-1"></i>
               <div>
-                <span class="info-titulo">Data de Abertura</span>
+                <span class="info-titulo">{{
+                  "sgq.openingDate" | translate
+                }}</span>
                 <br />
                 <span class="info-dados">
                   {{ parseDate(nc.data_abertura) || "00/00/0000" }}
@@ -37,7 +39,9 @@
             <div class="contato-info d-flex flex-row">
               <i class="bi bi-calendar-week mr-1"></i>
               <div>
-                <span class="info-titulo">Data de Fechamento</span>
+                <span class="info-titulo">{{
+                  "sgq.closingDate" | translate
+                }}</span>
                 <br />
                 <span class="info-dados">{{
                   parseDate(nc.data_fechamento) || "00/00/0000"
@@ -50,13 +54,15 @@
         <div class="div-ident-parceiro">
           <h2>
             <i class="bi bi-people mr-1"></i>
-            Dados de Emissão
+            {{ "newNC.review.emission" | translate }}
           </h2>
           <div class="d-flex justify-content-between flex-column flex-lg-row">
             <div class="contato-info d-flex flex-row">
               <i class="bi bi-person-circle mr-1"></i>
               <div>
-                <span class="info-titulo">Emissor</span>
+                <span class="info-titulo">{{
+                  "newNC.review.issuer" | translate
+                }}</span>
                 <br />
                 <span class="info-dados">{{
                   nc?.emissor?.username || "não preenchido"
@@ -66,7 +72,9 @@
             <div class="contato-info d-flex flex-row">
               <i class="bi bi-person-circle mr-1"></i>
               <div>
-                <span class="info-titulo">Responsável</span>
+                <span class="info-titulo">{{
+                  "global.responsible" | translate
+                }}</span>
                 <br />
                 <span class="info-dados">Janaína</span>
               </div>
@@ -74,7 +82,9 @@
             <div class="contato-info d-flex flex-row">
               <i class="bi bi-geo-alt mr-1"></i>
               <div>
-                <span class="info-titulo">Departamento</span>
+                <span class="info-titulo">{{
+                  "newNC.review.department" | translate
+                }}</span>
                 <br />
                 <p class="info-dados">Rh</p>
               </div>
@@ -83,12 +93,16 @@
         </div>
       </div>
       <div class="div-ident-parceiro mt-3">
-        <h1 class="titulo-parceiro">Dados do Parceiro</h1>
+        <h1 class="titulo-parceiro">
+          {{ "newNC.step1.partner.title" | translate }}
+        </h1>
         <div class="d-flex flex-column flex-lg-row">
           <div class="item">
             <div class="dados-parceiro razao-social">
               <div class="d-flex">
-                <h2 class="mr-2">Razão Social</h2>
+                <h2 class="mr-2">
+                  {{ "newNC.step1.partner.corporateName" | translate }}
+                </h2>
                 <p-chip>
                   <i class="bi bi-ticket-perforated mr-2"></i>
                   {{ nc?.customer?.code || nc?.provider?.code || "00000000" }}
@@ -99,7 +113,7 @@
                   nc?.customer?.corporate_name ||
                     nc?.provider?.corporate_name ||
                     nc?.sector?.name ||
-                    "Dado não preenchido"
+                    "global.empty" | translate
                 }}
               </p>
             </div>
@@ -107,19 +121,21 @@
           <div class="item">
             <div class="dados-parceiro">
               <div class="dados-contato">
-                <h1>Dados do Contato</h1>
+                <h1>{{ "newNC.step1.partner.contactTitle" | translate }}</h1>
                 <div></div>
                 <div class="contato-info d-flex flex-row">
                   <i class="pi pi-user"></i>
                   <div>
-                    <span class="info-titulo">Nome</span>
+                    <span class="info-titulo">{{
+                      "global.contacts.name" | translate
+                    }}</span>
                     <br />
                     <span class="info-dados">
                       {{
                         nc?.customer?.responsible_name ||
                           nc?.provider?.responsible_name ||
                           nc?.sector?.responsible_name ||
-                          "Dado não preenchido"
+                          "global.empty" | translate
                       }}
                     </span>
                   </div>
@@ -127,7 +143,9 @@
                 <div class="contato-info d-flex flex-row">
                   <i class="pi pi-phone"></i>
                   <div>
-                    <span class="info-titulo">Telefone</span>
+                    <span class="info-titulo">{{
+                      "newNC.step1.partner.phone" | translate
+                    }}</span>
                     <br />
                     <span class="info-dados">
                       {{
@@ -142,14 +160,16 @@
                 <div class="contato-info d-flex flex-row">
                   <i class="pi pi-at"></i>
                   <div>
-                    <span class="info-titulo">E-mail</span>
+                    <span class="info-titulo">
+                      {{ "global.contacts.email" | translate }}
+                    </span>
                     <br />
                     <span class="info-dados">
                       {{
                         nc?.customer?.responsible_email ||
                           nc?.provider?.responsible_email ||
                           nc?.sector?.responsible_email ||
-                          "Dado não preenchido"
+                          "global.empty" | translate
                       }}
                     </span>
                   </div>
@@ -163,7 +183,7 @@
         <div class="dados-parceiro razao-social item">
           <h2 class="mr-2">
             <i class="bi bi-file-earmark-text"></i>
-            Descrição da Não Conformidade
+            {{ "about.ncView.description" | translate }}
           </h2>
           <p-editor
             [style]="{ height: '144px', border: '1px solid #dddddd' }"
@@ -177,7 +197,7 @@
         <div class="dados-parceiro razao-social item">
           <h2 class="mr-2 mb-5">
             <i class="pi pi-camera"></i>
-            Evidencias fotográficas
+            {{ "newNC.review.pictureEvidence" | translate }}
           </h2>
           <p-carousel
             [value]="this.nc?.attachments?.filter(isType1) || []"
@@ -198,7 +218,7 @@
         <div class="dados-parceiro razao-social item">
           <h2 class="mr-2">
             <i class="bi bi-geo"></i>
-            Descrição de Ações Imediatas
+            {{ "newNC.review.actionDescription" | translate }}
           </h2>
           <p-editor
             [style]="{ height: '144px', border: '1px solid #dddddd' }"
@@ -212,7 +232,7 @@
         <div class="dados-parceiro razao-social item">
           <h2 class="mr-2 mb-5">
             <i class="pi pi-camera"></i>
-            Evidencias fotográficas
+            {{ "newNC.review.pictureEvidence" | translate }}
           </h2>
           <p-carousel
             [value]="this.nc?.attachments?.filter(isType2) || []"
@@ -236,17 +256,19 @@
       <div class="d-flex justify-content-between accordion">
         <p>
           <i class="bi bi-box-seam"></i>
-          Produtos e Pontos
+          {{ "newNC.review.productPoints" | translate }}
         </p>
       </div>
     </ng-template>
     <ng-template pTemplate="content">
       <div class="div-ident-parceiro row">
-        <h1 class="titulo-parceiro">Dados do Produto</h1>
+        <h1 class="titulo-parceiro">
+          {{ "newNC.review.productData" | translate }}
+        </h1>
         <div class="dados-parceiro col razao-social">
           <div class="d-flex">
             <h2 class="mr-2">
-              {{ nc?.product?.name || "Dado não preenchido" }}
+              {{ nc?.product?.name || "global.empty" | translate }}
             </h2>
             <p-chip>
               <i class="bi bi-ticket-perforated mr-2"></i>
@@ -254,18 +276,20 @@
             </p-chip>
           </div>
           <p class="d-block">
-            {{ nc?.product?.description || "Dado não preenchido" }}
+            {{ nc?.product?.description || "global.empty" | translate }}
           </p>
         </div>
         <div class="dados-parceiro col">
           <div class="dados-contato">
             <div class="d-flex justify-content-between">
-              <h2>Dados de NC</h2>
+              <h2>{{ "newNC.review.ncData" | translate }}</h2>
             </div>
             <div class="contato-info d-flex flex-row">
               <i class="bi bi-calculator"></i>
               <div>
-                <span class="info-titulo">Quantidade Total</span>
+                <span class="info-titulo">
+                  {{ "newNC.step1.product.amount" | translate }}
+                </span>
                 <br />
                 <span class="info-dados">{{ nc?.quant_total || "" }}</span>
               </div>
@@ -273,7 +297,9 @@
             <div class="contato-info d-flex flex-row">
               <i class="bi bi-calculator"></i>
               <div>
-                <span class="info-titulo">Quantidade em Não Conformidade</span>
+                <span class="info-titulo">
+                  {{ "newNC.step1.product.amountNonConformity" | translate }}
+                </span>
                 <br />
                 <span class="info-dados">{{ nc?.quant_nc || "" }}</span>
               </div>
@@ -281,7 +307,9 @@
             <div class="contato-info d-flex flex-row">
               <i class="bi bi-percent"></i>
               <div>
-                <span class="info-titulo">Percentual</span>
+                <span class="info-titulo">
+                  {{ "newNC.step1.product.percent" | translate }}
+                </span>
                 <br />
                 <span class="info-dados"
                   >{{ (nc?.quant_nc * 100) / nc?.quant_total || "0" }}%</span
@@ -294,24 +322,24 @@
       <div class="div-ident-parceiro mt-3">
         <h2>
           <i class="bi bi-people"></i>
-          Ponto de Controle
+          {{ "newNC.step1.checkpoint.title" | translate }}
         </h2>
         <div class="d-flex">
           <div class="col-6 d-flex flex-row">
             <i class="pi pi-directions mr-1"></i>
             <div>
               <span class="info-titulo">{{
-                nc?.tipo_controle || "Dado não preenchido"
+                nc?.tipo_controle || "global.empty" | translate
               }}</span>
             </div>
           </div>
           <div class="d-flex flex-row" *ngIf="nc?.tipo_controle != 'PR'">
             <i class="bi bi-calculator mr-1"></i>
             <div>
-              <span class="info-titulo">Número</span>
+              <span class="info-titulo">{{ "sgq.number" | translate }}</span>
               <br />
               <p class="info-dados">
-                {{ nc?.num_op || nc?.num_nota || "Dado não preenchido" }}
+                {{ nc?.num_op || nc?.num_nota || "global.empty" | translate }}
               </p>
             </div>
           </div>
@@ -320,7 +348,7 @@
       <div class="div-ident-parceiro pr-4 mt-3">
         <h2>
           <i class="bi bi-people"></i>
-          Ponto de Rejeição
+          {{ "newNC.step1.rejectionPoint.title" | translate }}
         </h2>
         <div class="d-flex dados-contato mb-3">
           <div
@@ -329,7 +357,9 @@
           >
             <i class="bi bi-123"></i>
             <div>
-              <span class="info-titulo">Número do Lote</span>
+              <span class="info-titulo">{{
+                "newNC.step1.rejectionPoint.numBatch" | translate
+              }}</span>
               <br />
               <span class="info-dados">{{ nc?.num_lote || "0" }}</span>
             </div>
@@ -340,7 +370,9 @@
           >
             <i class="bi bi-123"></i>
             <div>
-              <span class="info-titulo">Quantidade em Não Conformidade</span>
+              <span class="info-titulo">{{
+                "newNC.step1.product.amountNonConformity" | translate
+              }}</span>
               <br />
               <span class="info-dados">{{ nc?.num_ordem_compra || "0" }}</span>
             </div>
@@ -351,7 +383,9 @@
           >
             <i class="bi bi-123"></i>
             <div>
-              <span class="info-titulo">IT</span>
+              <span class="info-titulo">{{
+                "newNC.step1.rejectionPoint.it" | translate
+              }}</span>
               <br />
               <span class="info-dados">{{
                 "Numero: " + nc?.instruction?.code || "0"
@@ -372,7 +406,9 @@
           >
             <i class="bi bi-123"></i>
             <div>
-              <span class="info-titulo">Número PR</span>
+              <span class="info-titulo">{{
+                "newNC.step1.rejectionPoint.prCode" | translate
+              }}</span>
               <br />
               <span class="info-dados">{{ nc?.procedure?.code || "0" }}</span>
             </div>
@@ -395,7 +431,7 @@
       <div class="d-flex justify-content-between accordion">
         <p>
           <i class="bi bi-file-earmark-text"></i>
-          Identificação da NC
+          {{ "newNC.step1.identifyNC.titleNC" | translate }}
         </p>
       </div>
     </ng-template>
@@ -404,9 +440,9 @@
         <p-table [value]="nc.contacts">
           <ng-template pTemplate="header">
             <tr>
-              <th>Nome</th>
-              <th>E-mail</th>
-              <th>Tipo de Contato</th>
+              <th>{{ "global.contacts.name" | translate }}</th>
+              <th>{{ "global.contacts.email" | translate }}</th>
+              <th>{{ "global.contacts.contactType" | translate }}</th>
             </tr>
           </ng-template>
           <ng-template pTemplate="body" let-contact let-i="rowIndex">
