--- a/src/app/pages/ncs/sgq-evaluation/steps/risks/risks.component.html
+++ b/src/app/pages/ncs/sgq-evaluation/steps/risks/risks.component.html
@@ -1,15 +1,13 @@
 <div class="cabecalho">
-    <h1 class="mr-3">Riscos e Oportunidades *</h1>
-    <p>
-        Descreva os riscos e oportunidades observados nesta NC.
-    </p>
+  <h1 class="mr-3">{{ "about.sgqEvalComponent.risksAsterisk" | translate }}</h1>
+  <p>{{ "sgq.steps.step2.descriptionRisks" | translate }}</p>
 </div>
 
 <div class="mt-4">
-    <p-editor
-            [(ngModel)]="this.sgqServ.sgq.text_area2"
-            [style]="{ height: '25vh' }"
-            [modules]="{counter: {container: '#counterRc',unit: 'character'}}"
-    ></p-editor>
-    <div id="counterRc" class="text-end">0</div>
+  <p-editor
+    [(ngModel)]="this.sgqServ.sgq.text_area2"
+    [style]="{ height: '25vh' }"
+    [modules]="{ counter: { container: '#counterRc', unit: 'character' } }"
+  ></p-editor>
+  <div id="counterRc" class="text-end">0</div>
 </div>
