--- a/src/app/pages/ncs/create/ncs-create-header/ncs-create-header.component.html
+++ b/src/app/pages/ncs/create/ncs-create-header/ncs-create-header.component.html
@@ -16,7 +16,7 @@
         {{'global.cancel'| translate}}
         <i class="pi pi-times"></i>
       </button>
-      <button type="button" class="btn btn-dark mr-2" (click)="salvarNc('save')">
+      <button type="button" class="btn btn-dark" (click)="salvarNc('save')">
         {{'global.save'| translate}}
         <i class="pi pi-save"></i>
       </button>
