--- a/src/app/pages/ncs/create-prop/create-prop-header/create-prop-header.component.html
+++ b/src/app/pages/ncs/create-prop/create-prop-header/create-prop-header.component.html
@@ -24,7 +24,7 @@
                 {{'global.ncData'| translate}}
                 <i class="bi bi-file-earmark-medical"></i>
             </button>
-            <button (click)="saveProp()" type="button" class="btn btn-dark mr-2">
+            <button (click)="saveProp()" type="button" class="btn btn-dark">
                 {{'global.save'| translate}}
             <i class="pi pi-save"></i>
         </button>
