--- a/src/app/pages/ncs/create/waiting-product/waiting-product.component.html
+++ b/src/app/pages/ncs/create/waiting-product/waiting-product.component.html
@@ -1,6 +1,9 @@
 <div class="content">
   <h4>{{titleFigure}}</h4>
-  <div class="image-box d-flex align-items-center justify-content-center">
-    <img [src]="image" alt="" />
+  <div *ngIf="isImg1" class="image-box d-flex align-items-center justify-content-center">
+    <img src="../../../../../../../assets/images/hand-shake.svg" alt="" />
+  </div>
+  <div *ngIf="!isImg1" class="image-box2 d-flex align-items-center justify-content-center">
+    <img src="../../../../../../../assets/images/search-product.svg" alt="" />
   </div>
 </div>
