--- a/src/app/pages/ncs/sgq-evaluation/sgq-header/sgq-header.component.html
+++ b/src/app/pages/ncs/sgq-evaluation/sgq-header/sgq-header.component.html
@@ -28,7 +28,7 @@
         {{ "global.ncData" | translate }}
         <i class="bi bi-file-earmark-medical"></i>
       </button>
-      <button type="button" class="btn btn-dark mr-2" (click)="salvarSGQ()">
+      <button type="button" class="btn btn-dark" (click)="salvarSGQ()">
         {{ "global.save" | translate }}
         <i class="pi pi-save"></i>
       </button>
