correções no front

--- a/src/app/pages/ncs/about/closing/fechamento/fechamento.component.html
+++ b/src/app/pages/ncs/about/closing/fechamento/fechamento.component.html
@@ -43,7 +43,7 @@
     ></p-editor>
     <div class="d-flex flex-row justify-content-end button-bar mt-3">
      
-      <button class="btn btn-primary" (click)="save()">
+      <button class="btn btn-dark" (click)="save()">
         {{ "closeNC.confirm" | translate }}
       </button>
     </div>
