--- a/src/app/pages/ncs/create-prop/steps/step1/ishikawa-dialog/ishikawa-dialog.component.html
+++ b/src/app/pages/ncs/create-prop/steps/step1/ishikawa-dialog/ishikawa-dialog.component.html
@@ -261,7 +261,7 @@
         </p-editor>
         <div id="counter7" class="text-end">0</div>
         
-        <p-divider layout="vertical"></p-divider>
+        <p-divider layout="horizontal"></p-divider>
 
         <div>
             <h2 class="mr-2">
