--- a/src/app/pages/ncs/create/steps/step4/products-and-points/products-and-points.component.html
+++ b/src/app/pages/ncs/create/steps/step4/products-and-points/products-and-points.component.html
@@ -5,7 +5,7 @@
       <h2 class="mr-2">
         {{
           this.nonComplicanceService.nc?.product?.name ||
-          'global.dontApply'| translate
+          "Produto"
         }}
       </h2>
       <p-chip>
