--- a/src/app/pages/ncs/create/steps/step2/product/product-info/product-info.component.html
+++ b/src/app/pages/ncs/create/steps/step2/product/product-info/product-info.component.html
@@ -25,6 +25,7 @@
                 pInputText
                 [placeholder]="'global.type'| translate"
                 class="p-input text-sm input"
+                [disabled]="isNotApply()"
         />
       </div>
       <div class="d-flex flex-column inputs-sm mt-3 col-6">
@@ -36,6 +37,7 @@
                 pInputText
                 [placeholder]="'global.type'| translate"
                 class="p-input text-sm input"
+                [disabled]="isNotApply()"
         />
       </div>
     </div>
