--- a/src/app/pages/ncs/create-prop/create-prop-header/create-prop-header.component.html
+++ b/src/app/pages/ncs/create-prop/create-prop-header/create-prop-header.component.html
@@ -9,7 +9,7 @@
                 <p>{{'about.proposal'| translate}}</p>
                 <p-chip class="ml-2">
                     <i class="bi bi-ticket-perforated mr-2"></i>
-                    {{this.propService.ncProp.code}}
+                    {{this.propService.ncProp?.code}}
                 </p-chip>
             </div>
         </div>
